Ingress/virtualhosting.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - backend:
              service:
                name: testsvc1
                port:
                  number: 80
            pathType: exact
    - host: bar.foo.com
      http:
        paths:
          - backend:
              service:
                name: testsvc2
                port:
                  number: 80
            pathType: exact
